add test for parsing with extra arguments

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ set(TESTS
   test-output-pgsql-z_order.cpp
   test-output-pgsql.cpp
   test-parse-diff.cpp
+  test-parse-extra-args.cpp
   test-parse-xml2.cpp
   test-persistent-node-cache.cpp
   test-pgsql-escape.cpp
